<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/high_score_background"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/high_score_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/high_score"
        android:textAlignment="center"
        android:textColor="#10A505"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/easy_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/high_score_view"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/easy"
        android:textColor="#136406"
        android:textSize="37sp" />
    <TextView
        android:id="@+id/medium_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/easy_view"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/medium"
        android:textColor="#136406"
        android:textSize="37sp" />
    <TextView
        android:id="@+id/hard_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/medium_view"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/hard"
        android:textColor="#136406"
        android:textSize="37sp" />

    <TextView
        android:id="@+id/easy_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/high_score_view"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@id/easy_view"
        android:fontFamily="@font/arbutus"
        android:text="@string/point"
        android:textColor="#136406"
        android:textSize="37sp" />
    <TextView
        android:id="@+id/medium_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/easy_view"
        android:layout_toRightOf="@id/medium_view"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/point"
        android:textColor="#136406"
        android:textSize="37sp" />

    <TextView
        android:id="@+id/hard_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/medium_view"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@id/hard_view"
        android:fontFamily="@font/arbutus"
        android:text="@string/point"
        android:textColor="#136406"
        android:textSize="37sp" />

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/back_button_1" />
</RelativeLayout>