<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@drawable/game_background">

    <ImageView
        android:id="@+id/timer"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/timer" />

    <TextView
        android:id="@+id/time_count"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_toEndOf="@id/timer"
        android:text=""
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:contentDescription="@string/title"
        android:id="@+id/pause_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/pause_button" />

    <ImageView
        android:id="@+id/score_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/pause_image"
        android:layout_marginStart="40dp"
        app:srcCompat="@drawable/score_icon" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_toEndOf="@id/score_image"
        android:text="@string/score"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/bubble"
        android:gravity="center"
        android:text="1"
        android:textSize="40sp"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/bubble"
        android:text="2"
        android:gravity="center"
        android:textSize="40sp"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="true"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/bubble"
        android:text="3"
        android:textSize="40sp"
        android:gravity="center"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="true"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/bubble"
        android:text="4"
        android:gravity="center"
        android:textSize="40sp"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/bubble"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="5"
        android:textAlignment="center"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/place1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/square"
        android:gravity="center"
        android:text="@string/place1"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="2dp"/>

    <TextView
        android:id="@+id/place2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/square"
        android:gravity="center"
        android:text="@string/place1"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_toEndOf="@id/place1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="2dp"/>

    <TextView
        android:id="@+id/place3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/square"
        android:gravity="center"
        android:text="@string/place1"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_toEndOf="@id/place2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="2dp"/>

    <TextView
        android:id="@+id/place4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/square"
        android:gravity="center"
        android:text="@string/place1"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_toEndOf="@id/place3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="2dp"/>

    <TextView
        android:id="@+id/place5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/square"
        android:gravity="center"
        android:text="@string/place1"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_toEndOf="@id/place4"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="4dp"/>

</RelativeLayout>